@@ -39,6 +39,7 @@
   <include package="zope.app.wsgi" />
 
   <include package="grokcore.annotation" />
+  <include package="grokcore.chameleon" />
   <include package="grokcore.formlib" />
   <include package="grokcore.json" />
   <include package="grokcore.layout" />
